--- a/src/portal/lib/src/create-edit-endpoint/create-edit-endpoint.component.html
+++ b/src/portal/lib/src/create-edit-endpoint/create-edit-endpoint.component.html
@@ -48,7 +48,7 @@
             </clr-tooltip-content>
           </clr-tooltip>
         </div>
-        <div class="form-group" style="height:30px;">
+        <div class="form-group" class="form-height">
           <label for="spin" class="col-md-4"></label>
           <span class="col-md-8 spinner spinner-inline" [hidden]="!inProgress"></span>
         </div>
