--- a/src/portal/lib/src/repository-gridview/repository-gridview.component.scss
+++ b/src/portal/lib/src/repository-gridview/repository-gridview.component.scss
@@ -79,3 +79,11 @@
     width: 24px;
     margin-right: 12px;
 }
+
+.position-relative {
+    position: relative;
+}
+
+.push-image-button {
+    display: inline-block;
+}
