--- a/src/portal/src/app/project/member/member.component.html
+++ b/src/portal/src/app/project/member/member.component.html
@@ -1,7 +1,7 @@
 <div class="row content-space">
     <div>
         <div class="row flex-items-xs-between rightPos">
-            <div class="flex-xs-middle option-left" style="position: relative; top: 10px;">
+            <div class="flex-xs-middle option-left">
             </div>
             <div class="flex-xs-middle option-right">
                 <hbr-filter [withDivider]="true" filterPlaceholder='{{"MEMBER.FILTER_PLACEHOLDER" | translate}}' (filterEvt)="doSearch($event)" [currentValue]="searchMember"></hbr-filter>
