--- a/src/portal/src/app/project/project.component.html
+++ b/src/portal/src/app/project/project.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-        <div class="row flex-items-xs-between flex-items-xs-top" style="padding-left: 15px; padding-right: 15px;">
+        <div class="row flex-items-xs-between flex-items-xs-top projectPos">
             <h2 class="header-title">{{'PROJECT.PROJECTS' | translate}}</h2>
             <div>
                 <statistics-panel></statistics-panel>
@@ -8,7 +8,7 @@
         </div>
         <div class="row flex-items-xs-between rightPos">
             <div class="option-right">
-                <div class="select" style="float: left; left:-6px; top:8px;">
+                <div class="select select-option">
                     <select (change)="doFilterProjects()" [(ngModel)]="selecteType">
                         <option value="0" [selected]="currentFilteredType === 0">{{projectTypes[0] | translate}}</option>
                         <option value="1">{{projectTypes[1] | translate}}</option>
