--- a/src/portal/lib/src/image-name-input/image-name-input.component.html
+++ b/src/portal/lib/src/image-name-input/image-name-input.component.html
@@ -1,9 +1,9 @@
-<form [formGroup]="imageNameForm" class="clr-form clr-form-compact">
+<form [formGroup]="imageNameForm" class="clr-form clr-form-compact" (mouseleave)="leaveProjectInput()">
     <div class="clr-form-control clr-row">
         <label for="project-name" class="required clr-control-label clr-col-xs-12 clr-col-md-4">{{ 'PROJECT.NAME' | translate }}</label>
         <div class="clr-control-container clr-col-xs-12 clr-col-md-8">
-            <div class="clr-input-wrapper" (mouseleave)="leaveProjectInput()">
-                <label aria-haspopup="true" role="tooltip" class="wrap-label tooltip tooltip-validation tooltip-md tooltip-bottom-left" [class.invalid]='noProjectInfo'>
+            <div class="clr-input-wrapper">
+                <label aria-haspopup="true" role="tooltip" class="wrap-label tooltip tooltip-validation tooltip-md tooltip-top-left" [class.invalid]='noProjectInfo'>
                     <input type="text" 
                     id="project-name" 
                     class="clr-input"
