--- a/src/portal/src/app/base/harbor-shell/harbor-shell.component.html
+++ b/src/portal/src/app/base/harbor-shell/harbor-shell.component.html
@@ -10,6 +10,7 @@
             <router-outlet></router-outlet>
         </div>
         <clr-vertical-nav [clrVerticalNavCollapsible]="true" *ngIf="isUserExisting">
+            <div>
             <a clrVerticalNavLink routerLinkActive="active" routerLink="/harbor/projects">
                 <clr-icon shape="organization" clrVerticalNavIcon></clr-icon>
                 {{'SIDE_NAV.PROJECTS' | translate}}
@@ -17,10 +18,6 @@
             <a clrVerticalNavLink routerLinkActive="active" routerLink="/harbor/logs">
                 <clr-icon shape="list" clrVerticalNavIcon></clr-icon>
                 {{'SIDE_NAV.LOGS' | translate}}
-            </a>
-            <a clrVerticalNavLink target="_blank" routerLink="/devcenter" routerLinkActive="active">
-                <clr-icon shape="terminal" clrVerticalNavIcon></clr-icon>
-                {{'SIDE_NAV.SYSTEM_MGMT.DEVCENTER' | translate}}
             </a>
             <clr-vertical-nav-group *ngIf="isSystemAdmin" routerLinkActive="active">
                 <clr-icon shape="administrator" clrVerticalNavIcon></clr-icon>
@@ -49,6 +46,14 @@
                     </a>
                 </clr-vertical-nav-group-children>
             </clr-vertical-nav-group>
+            </div>
+            <div class="vertical-nav-footer">                                             
+                <a clrVerticalNavLink target="_blank" routerLink="/devcenter">
+                    <button type="button" class="btn btn-sm api-button">
+                        <span>{{'SIDE_NAV.API_EXPLORER' | translate }}</span>
+                    </button>
+                </a>
+            </div>
         </clr-vertical-nav>
         <hbr-operation-model *ngIf="isUserExisting"></hbr-operation-model>
     </div>
